[package]
name = "ffv1"
version = "0.0.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
edition = "2018"

[dependencies]
crc = "1.8"
num-traits = "0.2"
thiserror = "1.0"

[workspace]
members = ["ffv1-decoder", "benchmarks/rust-ffv1"]

[dev-dependencies]
av-data = "0.2.1"
av-format = "0.2.1"
byteorder = "1.3.4"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
