[package]
name = "ffv1-decoder"
version = "0.0.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
edition = "2018"

[[bin]]
name="ffv1-decoder"
path = "src/ffv1_decoder.rs"

[dependencies]
av-codec = "^0.2"
av-data = "^0.3"
av-format = "^0.3"
byteorder = "1.3.4"
clap = "3.0.13"
ffv1 = { path = "..", version = "0.0.0"}
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
